crates/sui/tests/snapshots/shell_tests__with_network__chain_id_caching__first_run_caches_chain_id.sh.snap
---
source: crates/sui/tests/shell_tests.rs
description: tests/shell_tests/with_network/chain_id_caching/first_run_caches_chain_id.sh
---
----- script -----
#!/usr/bin/env bash
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# Test that running a client command for the first time caches the chain_id to client.yaml

echo "=== Initial config state ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
else
    echo "chain_id field exists: NO"
fi

echo ""
echo "=== Running balance command ==="
one client --client.config $CONFIG balance > output.txt 2>&1
echo "Command executed"
rm -f output.txt

echo ""
echo "=== Final config state ==="
if grep -q "chain_id:" $CONFIG 2>&1; then
    echo "chain_id field exists: YES"
    grep "chain_id:" $CONFIG | sed 's/chain_id: .*/chain_id: <REDACTED>/'
else
    echo "chain_id field exists: NO"
fi

----- results -----
success: true
exit_code: 0
----- stdout -----
=== Initial config state ===
chain_id field exists: NO

=== Running balance command ===
Command executed

=== Final config state ===
chain_id field exists: YES
    chain_id: <REDACTED>

----- stderr -----
